<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Adhitya Bagas on 20/11/2020
  ~ Copyright (c) 2020 . All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UserDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/shape_gradient"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearFirst"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/profile"
                    android:textColor="@color/textColorWhite"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnShare"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_outline_share_24"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/user1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/full_name"
                        android:textColor="@color/textColorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/username"
                        android:textColor="@color/textColorBlack"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_outline_location_on_24" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/location"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_round_business_24" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/company"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/repository"
                        android:textColor="@color/textColorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvRepository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:paddingTop="10dp"
                        android:text="@string/_125"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/SemiBlack" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/followers"
                        android:textColor="@color/textColorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:paddingTop="10dp"
                        android:text="@string/_40"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/SemiBlack" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/following"
                        android:textColor="@color/textColorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:paddingTop="10dp"
                        android:text="@string/_20"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>
